--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,135 @@
-/* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+@use 'sass:map';
+
+@use './styles/m3-theme';
+@import './styles/variables';
+
+html {
+  @include mat.all-component-colors(m3-theme.$light-theme);
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif !important;
+  color: $dark-grey;
+}
+
+body {
+  justify-content: space-between;
+  background-color: $background-color;
+  text-align: center;
+}
+
+.page-layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex-grow: 1;
+  padding: 1em;
+}
+
+header, footer {
+  background-color: $dark-grey;
+  color: $white-font;
+  text-align: center;
+}
+
+header {
+  padding: 1px 0;
+}
+
+footer {
+  padding: 15px 0;
+  font-size: 15px;
+}
+
+.progress-bar-container {
+  padding: 1em
+}
+
+.progress-bar {
+  width: 100%;
+  background-color: $grey;
+  overflow: hidden;
+  border-radius: 3px;
+
+}
+
+.progress {
+  height: 10px;
+  background-color: $light-green;
+  border-radius: 3px;
+  transition: width 0.3s ease;
+}
+
+.select-button {
+  margin: 0.5em;
+  padding: 0.8em 2em;
+  font-size: 1em;
+  background-color: $light-green;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 200px;
+  height: 65px;
+  box-sizing: border-box;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  transition: background-color 0.2s ease;
+
+
+  &:hover {
+    background-color: m3-theme.$dark-green;
+  }
+
+  &:focus, &.selected {
+    outline: none;
+    width: 196px;
+    height: 61px;
+  }
+
+  &.selected {
+    border: 1px solid m3-theme.$dark-green;
+    box-shadow: inset 2px 2px 4px rgb(11, 124, 21), inset -1px -1px 3px rgb(124, 213, 130);
+  }
+}
+.nav-button {
+  margin: 0.5em;
+  padding: 0.8em 2em;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  width: 150px;
+  height: 45px;
+  color: $dark-grey;
+  background-color: inherit;
+}
+
+.nav-button:hover {
+  background-color: rgba(74, 74, 74, 0.44);
+  color: white;
+}
+
+.nav-button:focus {
+  outline: none;
+  width: 148px;
+  height: 43px;
+}
+
+button mat-icon {
+  margin-right: 0.5em;
+}
