--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
 <div class="page-layout">
   <app-header></app-header>
   <main>
-    <div class="">
+    <div>
       <app-calculator-form></app-calculator-form>
     </div>
   </main>
+  <div class="nav-container">
+    <button *ngIf="selectedTabIndex > 0" class="nav-button" (click)="previousStep()">
+      <mat-icon>arrow_back</mat-icon>
+      Wstecz
+    </button>
+  </div>
   <div class="progress-bar-container">
     <app-progress-bar></app-progress-bar>
   </div>
