--- a/src/app/components/calculator-form/calculator-form.component.html
+++ b/src/app/components/calculator-form/calculator-form.component.html
@@ -1,6 +1,5 @@
-<mat-tab-group [(selectedIndex)]="selectedTabIndex">
-
-  <mat-tab label="Location" disabled="false">
+<mat-tab-group>
+<mat-tab label="Location" disabled="false">
     <ng-template mat-tab-label>
       <mat-icon>location_on</mat-icon>
     </ng-template>
@@ -18,14 +17,14 @@
       <h2>Typ klienta</h2>
       <div>
         <button matRipple
-                [ngClass]="{'select-button': true, 'selected': formData.customerType === 'Prywatny'}"
-                (click)="formData.customerType = 'Prywatny'; nextStep()">
+                [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().customerType === 'Prywatny'}"
+                (click)="formDataService.getFormData().customerType = 'Prywatny'; nextStep()">
           <mat-icon>person</mat-icon>
           Prywatny
         </button>
         <button matRipple
-                [ngClass]="{'select-button': true, 'selected': formData.customerType === 'Firma'}"
-                (click)="formData.customerType = 'Firma'; nextStep()">
+                [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().customerType === 'Firma'}"
+                (click)="formDataService.getFormData().customerType = 'Firma'; nextStep()">
           <mat-icon>business</mat-icon>
           Firma
         </button>
@@ -41,30 +40,30 @@
       <h2>Typ montażu</h2>
       <div>
         <button matRipple
-                [ngClass]="{'select-button': true, 'selected': formData.installationType === 'Na dachu'}"
-                (click)="formData.installationType == 'Na dachu' ? formData.installationType = null : formData.installationType = 'Na dachu'">
+                [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().installationType === 'Na dachu'}"
+                (click)="formDataService.getFormData().installationType == 'Na dachu' ? formDataService.getFormData().installationType = null : formDataService.getFormData().installationType = 'Na dachu'">
           <mat-icon>roofing</mat-icon>
           Na dachu
         </button>
         <button matRipple
-                [ngClass]="{'select-button': true, 'selected': formData.installationType === 'Na gruncie'}"
-                (click)="formData.installationType = 'Na gruncie'; nextStep()">
+                [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().installationType === 'Na gruncie'}"
+                (click)="formDataService.getFormData().installationType = 'Na gruncie'; nextStep()">
           <mat-icon>forest</mat-icon>
           Na gruncie
         </button>
       </div>
-      <div [@expandCollapse]="formData.installationType == 'Na dachu' ? 'expanded' : 'collapsed'">
+      <div [@expandCollapse]="formDataService.getFormData().installationType == 'Na dachu' ? 'expanded' : 'collapsed'">
         <h2>Typ dachu</h2>
         <div>
           <button matRipple
-                  [ngClass]="{'select-button': true, 'selected': formData.roofType === 'Płaski'}"
-                  (click)="formData.roofType = 'Płaski'; nextStep()">
+                  [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().roofType === 'Płaski'}"
+                  (click)="formDataService.getFormData().roofType = 'Płaski'; nextStep()">
             <mat-icon>horizontal_rule</mat-icon>
             Płaski
           </button>
           <button matRipple
-                  [ngClass]="{'select-button': true, 'selected': formData.roofType === 'Pochyły'}"
-                  (click)="formData.roofType = 'Pochyły'; nextStep()">
+                  [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().roofType === 'Pochyły'}"
+                  (click)="formDataService.getFormData().roofType = 'Pochyły'; nextStep()">
             <mat-icon>roofing</mat-icon>
             Pochyły
           </button>
@@ -132,12 +131,10 @@
     <ng-template mat-tab-label>
       <mat-icon>calculate</mat-icon>
     </ng-template>
-    Podsumowanie
+    <div class="content">
+      <h2>Podsumowanie</h2>
+      <app-summary-form></app-summary-form>
+    </div>
   </mat-tab>
-
 </mat-tab-group>
 
-<button *ngIf="selectedTabIndex > 0" class="nav-button" (click)="previousStep()">
-  <mat-icon>arrow_back</mat-icon>
-  Wstecz
-</button>
