--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -1,1 +1,59 @@
-<p>result works!</p>
+<div class="card-grid">
+  <mat-card appearance="raised">
+    <mat-card-title>Parametry</mat-card-title>
+    <mat-card-subtitle></mat-card-subtitle>
+    <mat-card-content class="content">
+      - lista
+      - wprowadzonych
+      - danych
+      - w formularzu
+    </mat-card-content>
+  </mat-card>
+  <mat-card appearance="raised">
+    <mat-card-title>Moc</mat-card-title>
+    <mat-card-subtitle></mat-card-subtitle>
+    <mat-card-content class="content">
+      <h1>12,5 kWp</h1></mat-card-content>
+  </mat-card>
+  <mat-card appearance="raised">
+    <mat-card-title>Moduły</mat-card-title>
+    <mat-card-subtitle>505W</mat-card-subtitle>
+    <mat-card-content class="content">-</mat-card-content>
+    <mat-card-footer>50 szt.</mat-card-footer>
+  </mat-card>
+  <mat-card appearance="raised">
+    <mat-card-title>Montaż</mat-card-title>
+    <mat-card-content class="content">zdjecie</mat-card-content>
+    <mat-card-footer>balastowy</mat-card-footer>
+  </mat-card>
+  <mat-card appearance="raised">
+    <mat-card-title>Gwarancja</mat-card-title>
+    <mat-card-content class="content">- lista</mat-card-content>
+  </mat-card>
+  <mat-card appearance="raised">
+    <mat-card-title>Cena</mat-card-title>
+    <mat-card-subtitle>kompleksowa</mat-card-subtitle>
+    <mat-card-content class="content"><h1>100 000 zł</h1></mat-card-content>
+    <mat-card-footer>netto</mat-card-footer>
+  </mat-card>
+  <mat-card appearance="raised">
+    <mat-card-title>Marka</mat-card-title>
+    <mat-card-subtitle>podzespołów</mat-card-subtitle>
+    <mat-card-content class="content">-Moduły: Encor Tier1</mat-card-content>
+  </mat-card>
+  <mat-card appearance="raised">
+    <mat-card-title>Nasłonecznienie</mat-card-title>
+    <mat-card-subtitle>w twoim regionie</mat-card-subtitle>
+    <mat-card-content class="content">-</mat-card-content>
+  </mat-card>
+  <mat-card appearance="raised">
+    <mat-card-title>Prognozowana produkcja</mat-card-title>
+    <mat-card-content class="content">-</mat-card-content>
+    <mat-card-footer>Przy średniej cenie 0.90 zł / 1 kWh <u>(źródło)</u></mat-card-footer>
+  </mat-card>
+  <mat-card appearance="raised">
+    <mat-card-title>OPCJE DODATKOWE</mat-card-title>
+    <mat-card-content class="content">-magazyn energii</mat-card-content>
+    <mat-card-footer>PRZELICZ</mat-card-footer>
+  </mat-card>
+</div>
