--- a/src/app/shared-components/header/header.component.html
+++ b/src/app/shared-components/header/header.component.html
@@ -1,3 +1,7 @@
 <header class="mat-elevation-z2">
-    <h2 class="mat-">Bezpłatny Kalkulator Fotowoltaiki</h2>
+  <h2>
+    <a [routerLink]="['/form']" class="header-link">
+      Bezpłatny Kalkulator Fotowoltaiki
+    </a>
+  </h2>
 </header>
