improve result page, add policy page, add api service

--- a/src/app/components/calculator-form/calculator-form.component.html
+++ b/src/app/components/calculator-form/calculator-form.component.html
@@ -1,142 +1,144 @@
-<mat-tab-group>
-  <mat-tab label="Location" disabled="false">
-    <ng-template mat-tab-label>
-      <mat-icon>location_on</mat-icon>
-    </ng-template>
-    <div class="content">
-      <h2>Wybierz swoje województwo</h2>
-      <app-map (regionSelected)="onRegionSelected($event)"></app-map>
-    </div>
-  </mat-tab>
-
-  <mat-tab label="Customer" [disabled]="true">
-    <ng-template mat-tab-label>
-      <mat-icon>person</mat-icon>
-    </ng-template>
-    <div class="content">
-      <h2>Typ klienta</h2>
-      <div>
-        <button matRipple
-                [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().customerType === 'Prywatny'}"
-                (click)="formDataService.getFormData().customerType = 'Prywatny'; nextStep()">
-          <mat-icon>person</mat-icon>
-          Prywatny
-        </button>
-        <button matRipple
-                [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().customerType === 'Firma'}"
-                (click)="formDataService.getFormData().customerType = 'Firma'; nextStep()">
-          <mat-icon>business</mat-icon>
-          Firma
-        </button>
+<div class="main-layout">
+  <mat-tab-group>
+    <mat-tab label="Location" disabled="false">
+      <ng-template mat-tab-label>
+        <mat-icon>location_on</mat-icon>
+      </ng-template>
+      <div class="content">
+        <h2>Wybierz swoje województwo</h2>
+        <app-map (regionSelected)="onRegionSelected($event)"></app-map>
       </div>
-    </div>
-  </mat-tab>
+    </mat-tab>
 
-  <mat-tab label="MountType" [disabled]="true">
-    <ng-template mat-tab-label>
-      <mat-icon>roofing</mat-icon>
-    </ng-template>
-    <div class="content">
-      <h2>Typ montażu</h2>
-      <div>
-        <button matRipple
-                [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().installationType === 'Na dachu'}"
-                (click)="formDataService.getFormData().installationType == 'Na dachu' ? formDataService.getFormData().installationType = null : formDataService.getFormData().installationType = 'Na dachu'">
-          <mat-icon>roofing</mat-icon>
-          Na dachu
-        </button>
-        <button matRipple
-                [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().installationType === 'Na gruncie'}"
-                (click)="formDataService.getFormData().installationType = 'Na gruncie'; nextStep()">
-          <mat-icon>forest</mat-icon>
-          Na gruncie
-        </button>
-      </div>
-      <div [@expandCollapse]="formDataService.getFormData().installationType == 'Na dachu' ? 'expanded' : 'collapsed'">
-        <h2>Typ dachu</h2>
+    <mat-tab label="Customer" [disabled]="true">
+      <ng-template mat-tab-label>
+        <mat-icon>person</mat-icon>
+      </ng-template>
+      <div class="content">
+        <h2>Typ klienta</h2>
         <div>
           <button matRipple
-                  [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().roofType === 'Płaski'}"
-                  (click)="formDataService.getFormData().roofType = 'Płaski'; nextStep()">
-            <mat-icon>horizontal_rule</mat-icon>
-            Płaski
+                  [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().customerType === 'PRIVATE'}"
+                  (click)="formDataService.getFormData().customerType = 'PRIVATE'; nextStep()">
+            <mat-icon>person</mat-icon>
+            Prywatny
           </button>
           <button matRipple
-                  [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().roofType === 'Pochyły'}"
-                  (click)="formDataService.getFormData().roofType = 'Pochyły'">
-            <mat-icon>roofing</mat-icon>
-            Pochyły
+                  [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().customerType === 'ENTREPRENEUR'}"
+                  (click)="formDataService.getFormData().customerType = 'ENTREPRENEUR'; nextStep()">
+            <mat-icon>business</mat-icon>
+            Firma
           </button>
         </div>
       </div>
-      <div [@expandCollapse]="formDataService.getFormData().roofType == 'Pochyły' ? 'expanded' : 'collapsed'">
-        <mat-form-field style="width: 300px; padding: 30px">
-          <mat-label style="font-weight: bold;">Rodzaj Pokrycia Dachu</mat-label>
-          <mat-select required [(ngModel)]="formDataService.getFormData().roofSurface">
-            <mat-option value="ceramic_tiles" (click)="nextStep()">Dachówka ceramiczna</mat-option>
-            <mat-option value="metal_tiles" (click)="nextStep()">Blachodachówka</mat-option>
-            <mat-option value="steel" (click)="nextStep()">Blacha</mat-option>
-            <mat-option value="tar_paper" (click)="nextStep()">Papa</mat-option>
-            <mat-option value="other" (click)="nextStep()">Inne</mat-option>
-          </mat-select>
-        </mat-form-field>
+    </mat-tab>
+
+    <mat-tab label="MountType" [disabled]="true">
+      <ng-template mat-tab-label>
+        <mat-icon>roofing</mat-icon>
+      </ng-template>
+      <div class="content">
+        <h2>Typ montażu</h2>
+        <div>
+          <button matRipple
+                  [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().installationType === 'ROOF'}"
+                  (click)="formDataService.getFormData().installationType == 'ROOF' ? formDataService.getFormData().installationType = null : formDataService.getFormData().installationType = 'ROOF'">
+            <mat-icon>roofing</mat-icon>
+            Na dachu
+          </button>
+          <button matRipple
+                  [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().installationType === 'GROUND'}"
+                  (click)="formDataService.getFormData().installationType = 'GROUND'; nextStep()">
+            <mat-icon>forest</mat-icon>
+            Na gruncie
+          </button>
+        </div>
+        <div
+          [@expandCollapse]="formDataService.getFormData().installationType == 'ROOF' ? 'expanded' : 'collapsed'">
+          <h2>Typ dachu</h2>
+          <div>
+            <button matRipple
+                    [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().roofType === 'FLAT_ROOF'}"
+                    (click)="formDataService.getFormData().roofType = 'FLAT_ROOF'; nextStep()">
+              <mat-icon>horizontal_rule</mat-icon>
+              Płaski
+            </button>
+            <button matRipple
+                    [ngClass]="{'select-button': true, 'selected': formDataService.getFormData().roofType === 'SLANT_ROOF'}"
+                    (click)="formDataService.getFormData().roofType = 'SLANT_ROOF'">
+              <mat-icon>roofing</mat-icon>
+              Pochyły
+            </button>
+          </div>
+        </div>
+        <div [@expandCollapse]="formDataService.getFormData().roofType == 'SLANT_ROOF' ? 'expanded' : 'collapsed'">
+          <mat-form-field style="width: 300px; padding: 30px">
+            <mat-label style="font-weight: bold;">Rodzaj Pokrycia Dachu</mat-label>
+            <mat-select required [(ngModel)]="formDataService.getFormData().roofSurface">
+              <mat-option value="CERAMIC_TILE_SLANT" (click)="nextStep()">Dachówka ceramiczna</mat-option>
+              <mat-option value="STEEL_TILE_SLANT" (click)="nextStep()">Blachodachówka</mat-option>
+              <mat-option value="STEEL_SLANT" (click)="nextStep()">Blacha</mat-option>
+<!--              <mat-option value="tar_paper" (click)="nextStep()">Papa</mat-option>-->
+              <mat-option value="OTHER" (click)="nextStep()">Inne</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
       </div>
-    </div>
-  </mat-tab>
+    </mat-tab>
 
-  <mat-tab label="Calculation" [disabled]="true">
-    <ng-template mat-tab-label>
-      <mat-icon>power</mat-icon>
-    </ng-template>
-    <h2 style="padding-top:70px">Typ Kalkulacji</h2>
+    <mat-tab label="Calculation" [disabled]="true">
+      <ng-template mat-tab-label>
+        <mat-icon>power</mat-icon>
+      </ng-template>
+      <h2 style="padding-top:70px">Typ Kalkulacji</h2>
 
-    <div class="content" style="justify-content: start;">
-      <mat-accordion>
-        <mat-expansion-panel togglePosition="before">
-          <mat-expansion-panel-header>
-            <mat-panel-title>Roczne zużycie energii elektrycznej</mat-panel-title>
-            <mat-icon>power</mat-icon>
-          </mat-expansion-panel-header>
-          <div class="expansion-power-panel-content">
-            <mat-form-field appearance="outline">
-              <mat-label>kWh</mat-label>
-              <input matInput type="number" style="text-align: center;" [step]="1000" [min]="0"
-                     [(ngModel)]="energyConsumptionPerYear"/>
-            </mat-form-field>
-            <div>
-              <button class="select-button" matRipple
-                      (click)="energyConsumptionPerYear > 0 ? goToResult() : showMessage()">
-                <mat-icon>calculate</mat-icon>
-                Przelicz
-              </button>
+      <div class="content" style="justify-content: start;">
+        <mat-accordion>
+          <mat-expansion-panel togglePosition="before">
+            <mat-expansion-panel-header>
+              <mat-panel-title>Roczne zużycie energii elektrycznej</mat-panel-title>
+              <mat-icon>power</mat-icon>
+            </mat-expansion-panel-header>
+            <div class="expansion-power-panel-content">
+              <mat-form-field appearance="outline">
+                <mat-label>kWh</mat-label>
+                <input matInput type="number" style="text-align: center;" [step]="1000" [min]="0"
+                       [(ngModel)]="energyConsumptionPerYear"/>
+              </mat-form-field>
+              <div>
+                <button class="select-button" matRipple
+                        (click)="energyConsumptionPerYear > 0 ? goToResult('energyConsumptionPerYear') : showMessage()">
+                  <mat-icon>calculate</mat-icon>
+                  Przelicz
+                </button>
+              </div>
             </div>
-          </div>
-        </mat-expansion-panel>
-        <mat-expansion-panel togglePosition="before">
-          <mat-expansion-panel-header>
-            <mat-panel-title>Oczekiwana moc instalacji</mat-panel-title>
-            <mat-icon>solar_power</mat-icon>
-          </mat-expansion-panel-header>
-          <div class="expansion-power-panel-content">
-            <mat-form-field appearance="outline">
-              <mat-label>kWp</mat-label>
-              <input matInput type="number" style="text-align: center;" [(ngModel)]="installationPower" [step]="0.5"
-                     [min]="0">
-            </mat-form-field>
-            <mat-slider class="my-slider" min="3" max="50" step="0.5">
-              <input matSliderThumb value="3" [(ngModel)]="installationPower">
-            </mat-slider>
-            <div>
-              <button class="select-button" matRipple (click)="installationPower > 0 ? goToResult() : showMessage()">
-                <mat-icon>calculate</mat-icon>
-                Przelicz
-              </button>
+          </mat-expansion-panel>
+          <mat-expansion-panel togglePosition="before">
+            <mat-expansion-panel-header>
+              <mat-panel-title>Oczekiwana moc instalacji</mat-panel-title>
+              <mat-icon>solar_power</mat-icon>
+            </mat-expansion-panel-header>
+            <div class="expansion-power-panel-content">
+              <mat-form-field appearance="outline">
+                <mat-label>kWp</mat-label>
+                <input matInput type="number" style="text-align: center;" [(ngModel)]="expectedPvPower" [step]="0.5"
+                       [min]="0">
+              </mat-form-field>
+              <mat-slider class="my-slider" min="3" max="50" step="0.5">
+                <input matSliderThumb value="3" [(ngModel)]="expectedPvPower">
+              </mat-slider>
+              <div>
+                <button class="select-button" matRipple (click)="expectedPvPower > 0 ? goToResult('expectedPvPower') : showMessage()">
+                  <mat-icon>calculate</mat-icon>
+                  Przelicz
+                </button>
+              </div>
             </div>
-          </div>
-        </mat-expansion-panel>
-      </mat-accordion>
+          </mat-expansion-panel>
+        </mat-accordion>
 
-    </div>
-  </mat-tab>
-</mat-tab-group>
-
+      </div>
+    </mat-tab>
+  </mat-tab-group>
+</div>
