--- a/src/app/shared-components/header/header.component.html
+++ b/src/app/shared-components/header/header.component.html
@@ -1,6 +1,6 @@
-<header class="mat-elevation-z2">
+<header class="mat-elevation-z5">
   <h2>
-    <a [routerLink]="['/form']" class="header-link">
+    <a [routerLink]="['/']" class="header-link">
       Bezpłatny Kalkulator Fotowoltaiki
     </a>
   </h2>
